testsuite/tests/properties/invalid_node_builder/not_synth/test.lkt
from common import BaseExample, FooNode, Literal

@synthetic class EmptyNode: FooNode {
}

class Example: BaseExample {
    @lazy prop: EmptyNode = Literal.builder().build()
}
